@@ -11,6 +11,13 @@ noinst_HEADERS = QhyLocator.h QhyUtils.h QhyCamera.h QhyCcd.h QhyCooler.h
 
 SRCFILES = QhyLocator.cpp QhyUtils.cpp QhyCamera.cpp QhyCcd.cpp QhyCooler.cpp
 
+if USE_UDEV
+
+udevdir = /etc/udev/rules.d
+udev_DATA = firmware/85-qhy.rules
+
+endif
+
 if ENABLE_UNITTESTS
 
 noinst_LTLIBRARIES = libqhy.la
